--- a/src/componentes/Cabecalho.module.css
+++ b/src/componentes/Cabecalho.module.css
@@ -1,6 +1,12 @@
 .conteiner {
+    background-color: var(--roxo-escuro);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+
+}
+
+.conteiner p{
+    font-size: 2rem;
+    color: var(--cinza-claro);
 }
