--- a/src/componentes/Lateral.module.css
+++ b/src/componentes/Lateral.module.css
@@ -1,6 +1,27 @@
 .conteiner {
-    display: flex;
+    /* display: flex;
     justify-content: center;
+    align-items: center; */
+    background-color: var(--cinza-claro);
+}
+
+.imagemCabecalho{
+    width: 100%;
+    height: 75px;
+    object-fit: cover;
+}
+
+.perfil{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    background-color: #fff;
+    margin: -2.5rem;
+}
+
+.avatar{
+    width: 5rem;
+    height: 5rem;
+    border-radius: 10px;
+    border: 2px solid var(--roxo-escuro);
+    margin-bottom: 1rem;
 }
