Utilizando a API TMDB

--- a/src/paginas/Lista.module.css
+++ b/src/paginas/Lista.module.css
@@ -1,5 +1,8 @@
 .conteiner{
     background-color: var(--cinza-claro);
     display: flex;
-    padding: 10px;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-content: stretch;
+    padding: 5px;
 }
