--- a/src/componentes/Card.module.css
+++ b/src/componentes/Card.module.css
@@ -1,11 +1,11 @@
 .conteiner{
     background-color: var(--roxo-escuro);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     width: 300px;
-    height: 600px;
-    padding: 16px;
+    padding: 10px;
+    margin: 10px 5px;
     border-radius: 8px;
     transition: transform .25s;
 }
