--- a/src/componentes/Filme.module.css
+++ b/src/componentes/Filme.module.css
@@ -11,9 +11,12 @@
 
 .conteiner figcaption{
     padding: 12px 0;
+    text-align: center;
+    font-size: 1.25rem;
 }
 
 .conteiner p{
-    padding: 3px 0;
-    font-size: 13px;
+    padding: 6px 0;
+    text-align: justify;
+    font-size: 13px; 
 }
