--- a/src/componentes/Lateral.module.css
+++ b/src/componentes/Lateral.module.css
@@ -19,9 +19,34 @@
 }
 
 .avatar{
-    width: 5rem;
-    height: 5rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 10px;
     border: 2px solid var(--roxo-escuro);
     margin-bottom: 1rem;
+}
+
+.conteiner section{
+    margin: 2rem;
+    padding: 2rem;
+}
+
+.botao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: var(--cinza-claro);
+    color: var(--roxo-escuro);
+    margin-bottom: 18px;
+    padding: 8px;
+    border: 2px solid var(--roxo-escuro);
+    border-radius: 8px;
+
+    transition: color .5s background-color .5s;
+}
+
+.botao:hover {
+    background-color: var(--roxo-escuro);
+    color: var(--cinza-claro);
 }
